# DiMP

./: CMakeLists.txt  DiMP10.sln  DiMP14.sln  DiMP15.sln  DiMP8.sln  DiMP9.sln  LICENSE  Readme.txt  SampleApp.h  dimp.doxy  exclude.list  pack.bat  readme.txt
Examples/: CMakeLists.txt
Examples/Balljoint/: Balljoint.vcxproj  Balljoint14.vcxproj  Balljoint15.vcxproj  CMakeLists.txt  main.cpp
Examples/Contact/: CMakeLists.txt  Contact.vcxproj  Contact14.vcxproj  Contact15.vcxproj  main.cpp
Examples/Hinge/: CMakeLists.txt  Hinge.vcxproj  Hinge14.vcxproj  Hinge15.vcxproj  main.cpp
Examples/Planejoint/: CMakeLists.txt  Planejoint.vcxproj  Planejoint14.vcxproj  Planejoint15.vcxproj  main.cpp
Examples/Slider/: CMakeLists.txt  Slider.vcxproj  Slider14.vcxproj  Slider15.vcxproj  main.cpp
Programs/: CMakeLists.txt  Programs.sln  Programs14.sln  Programs15.sln  SampleApp.h
Programs/BallCatch/: BallCatch9.vcproj  main.cpp
Programs/BallCatch2/: BallCatch2_10.vcxproj  BallCatch2_9.vcproj  BallCathing.cpp  BallCathing.h  main.cpp
Programs/Biped/: Biped.vcxproj  Biped.vcxproj.filters  Biped14.vcxproj  Biped15.vcxproj  CMakeLists.txt  main.cpp
Programs/Biped2/: Biped2.vcxproj  Biped2.vcxproj.filters  main.cpp
Programs/Biped3/: Biped3.vcxproj  Biped3.vcxproj.filters  PHConstraintEngineReport.csv  log_major.csv  main.cpp  main_csv.cpp
Programs/Biped3/data/: delta_pos.csv  delta_pos1.csv
Programs/Biped5/: Biped5.vcxproj  main.cpp
Programs/BipedCapt/: CMakeLists.txt  main.cpp
Programs/BipedforOA/: BipedforOA.vcxproj  BipedforOA.vcxproj.filters  main(Mid).cpp  main(Side).cpp  main.cpp
Programs/BoxHolding2/: BoxHolding.cpp  BoxHolding.h  BoxHolding2_10.vcxproj  main.cpp
Programs/Centroid/: CMakeLists.txt  main.cpp
Programs/Centroid2/: CMakeLists.txt  main.cpp  mpc.cpp  mpc.h
Programs/ContactStateGraph/: ContactStateGraph.sln
Programs/ContactStateGraph/ContactStateGraph/: ContactStateGraph.vcxproj
Programs/ContactStateGraph/RobotArm_Replanning/: FileMapping.h  RobotArm.cpp  RobotArm.h  RobotArm_Replanning.vcxproj  RobotArm_Replanning.vcxproj.filters  TP_response.h  TP_setting.h  Workspace.cpp  Workspace.h  main.cpp  plot.plt
Programs/ContactStateGraph/RobotArm_Replanning/data/: link3.stl  link3_binary.stl  link4a_binary.stl  pa10.xml  rack.stl  rack.xml  robotarm2.xml  scene_reaching2d.xml  scene_reaching2dd.xml  scene_reaching3d.xml  setting.xml  side.stl  table1000mm.stl  table500mm.stl  table_l.xml  table_s.xml
Programs/Dance/bvhfiles/__MACOSX/bvhfiles/: ._kashiyuka.bvh
Programs/Humanoid1/: Humanoid.cpp  Humanoid.h  Humanoid1_10.vcxproj  Humanoid1_8.vcproj  Humanoid1_9.vcproj  main.cpp
Programs/Humanoid1/misz/: arm1.x  arml.blend  arml.x  armr.blend  armr.x  asimo.blend  asimo.x  body.blend  body.x  body12.x  bodya.x  bodym.x  chest.blend  chest.x  floor.blend  floor.x  floor_kahanshin.blend  footasimo.blend  footasimo.x  footl.blend  footr.blend  footr.x  forearml.blend  forearml.x  forearmr.blend  forearmr.x  forearmrold.blend  handl.blend  handl.x  handr.blend  handr.x  head.blend  hipsidel.blend  hipsidel.x  hipsider.blend  hipsider.x  hipyawl.blend  hipyawl.x  hipyawr.blend  hipyawr.x  (+19 more)
Programs/Humanoid1/model/: arm.blend  arm.blend1  arm.x  bodyshape.blend  bodyshape.x  headshape.blend  robot.blend  robot.blend1  robot.x
Programs/Humanoid2/: Humanoid2.cpp  Humanoid2.h  Humanoid2.vcxproj  main.cpp
Programs/HumanoidCatching/: HumanoidCatching.cpp  HumanoidCatching.h  HumanoidCatching_10.vcxproj  main.cpp  初期設定メモ.txt
Programs/Pendulum/: Pendulum.vcxproj
Programs/RobotArm/: CMakeLists.txt  RobotArm.cpp  RobotArm.h  RobotArm10.vcxproj  RobotArm14.vcxproj  RobotArm15.vcxproj  RobotArm8.vcproj  Workspace.cpp  Workspace.h  main.cpp  mymodule.cpp  mymodule.h
Programs/RobotArm/data/: base_binary.stl  link1_cap.stl  link2a.stl  link2b.stl  link3_cap_binary.stl  link4a.stl  link5_cap.stl  link6_binary.stl  pa10.xml  scene_reaching2d.xml  scene_reaching3d.xml  scene_toss3d.xml  setting.xml
Programs/Running/: CMakeLists.txt  main.cpp
Programs/Wholebody/: CMakeLists.txt  main.cpp  mpc.cpp  mpc.h  myik.cpp  myik.h
matlab/centroid/: calc_cost.m  calc_matrices.m  main.m  optimal.m
src/: App.cpp  App.h  Avoid.cpp  Avoid.h  Biped.cpp  Biped.h  Biped2.cpp  Biped2.h  Biped3.cpp  Biped3_csv.cpp  Biped3_csv2.cpp  Biped3_swingrev.cpp  Biped5.cpp  Biped5.h  BipedforOA(Mid).cpp  BipedforOA(Side).cpp  BipedforOA(Side).h  BipedforOA.cpp  BipedforOA.h  CMakeLists.txt  Connector.cpp  Connector.h  Constraint.cpp  Constraint.h  Contact.cpp  Contact.h  DiMP.h  DiMP2_10.vcxproj  DiMP2_10.vcxproj.filters  DiMP2_14.vcxproj  DiMP2_14.vcxproj.filters  DiMP2_15.vcxproj  DiMP2_8.vcproj  DiMP2_9.vcproj  DrawCanvas.cpp  DrawCanvas.h  DrawConfig.cpp  DrawConfig.h  Geometry.cpp  Geometry.h  (+44 more)
src/Console/: CMakeLists.txt  Console.vcxproj  Console.vcxproj.filters  Console15.vcxproj
src/Console/base/: typedefs.h
src/Console/module/: manager.cpp  manager.h  module.cpp  module.h  rendering.cpp  rendering.h  request.cpp  request.h  simulation.cpp  simulation.h
src/Console/window/: camera.cpp  camera.h  panel.cpp  panel.h  viewer.cpp  viewer.h
src/DiMP/: CMakeLists.txt  DiMP.h  Types.h
src/DiMP/App/: App.cpp  App.h
src/DiMP/Graph/: Avoid.cpp  Avoid.h  Biped.cpp  Biped.h  BipedCapt.cpp  BipedCapt.h  Centroid.cpp  Centroid.h  Connector.cpp  Connector.h  Contact.cpp  Contact.h  Geometry.cpp  Geometry.h  Graph.cpp  Graph.h  ID.h  Joint.cpp  Joint.h  Match.cpp  Match.h  Node.cpp  Node.h  Object.cpp  Object.h  Octtree.cpp  Octtree.h  Running.cpp  Running.h  Solver.cpp  Solver.h  Task.cpp  Task.h  Timing.cpp  Timing.h  Tree.cpp  Tree.h  Vehicle.h  Wholebody.cpp  Wholebody.h
src/DiMP/Load/: Loader.cpp  Loader.h
src/DiMP/Render/: Canvas.cpp  Canvas.h  Config.cpp  Config.h
src/DiMP/Solver/: Constraint.cpp  Constraint.h  Ipopt.cpp  Ipopt.h  Link.cpp  Link.h  Range.cpp  Range.h  Solver.cpp  Solver.h  SolverPareto.cpp  Variable.cpp  Variable.h
